--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,34 @@
 @import "bootstrap/dist/css/bootstrap.min.css";
 
-body{
-    background: white;
+body {
+    background: green;
+    padding-top: 20px;
+}
+
+.card {
+     display: flex;
+    justify-content: center;  
+    align-items: center;      
+    background-color: white;
+    margin: auto;
+    height: 400px;
+    font-size: 80px;
+    width: 250px;
+    padding: 20px;
+    border: 1px solid black;
+    border-radius: 12px;
+    position:relative
+}
+.palo-superior{
+    position:absolute;
+    top: 0px;
+    left:10px;
+    font-size: 70px;
+}
+.palo-inferior{
+    position:absolute;
+    bottom: 0px;
+    right:10px;
+    font-size: 70px;
+    transform: rotate(180deg); 
 }
