--- a/src/style.css
+++ b/src/style.css
@@ -47,6 +47,10 @@ body {
 .card.shuffling {
   animation: flip 0.6s ease-in-out;
 }
+#newCard {
+  display: block;
+  margin: 20px auto;
+}
 #historial {
   margin-top: 20px;
   padding: 15px;
